# iam_mvp

./: .gitignore  CMakeLists.txt  README.md  RESEARCH_PLAN.md  build.sh  output.txt  pyproject.toml  setup.py  test_step2.sh
cpp/: CMakeLists.txt
cpp/include/iam/core/: Tensor.hpp
cpp/src/iam/core/: Tensor.cpp
mlir/: CMakeLists.txt
mlir/include/iam/Dialect/: IAMDialect.hpp
mlir/lib/iam/Dialect/: IAMDialect.cpp
mlir/tablegen/: IAMBase.td
mlir/test/: test_dialect.cpp
python/bindings/: CMakeLists.txt  core_bindings.cpp
python/iam/: __init__.py
tests/unit/: test_core.py
